EDA - Graficos de variables categoricas, numericas y cruce de variables

--- a/add_tp1.ipynb
+++ b/add_tp1.ipynb
@@ -979,9 +979,289 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f68a6db1",
+   "metadata": {},
+   "source": [
+    "## 3. Análisis exploratorio de datos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "eac77a34",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>active_year</th>\n",
+       "      <th>type_of_violence</th>\n",
+       "      <th>dyad_name</th>\n",
+       "      <th>side_a</th>\n",
+       "      <th>side_b</th>\n",
+       "      <th>City</th>\n",
+       "      <th>CACE cityname</th>\n",
+       "      <th>Capital</th>\n",
+       "      <th>Majorcity</th>\n",
+       "      <th>Top3cities</th>\n",
+       "      <th>adm_1</th>\n",
+       "      <th>adm_2</th>\n",
+       "      <th>country</th>\n",
+       "      <th>region</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>141513</td>\n",
+       "      <td>141513</td>\n",
+       "      <td>141513</td>\n",
+       "      <td>141513</td>\n",
+       "      <td>141513</td>\n",
+       "      <td>141513</td>\n",
+       "      <td>141513</td>\n",
+       "      <td>141513</td>\n",
+       "      <td>141513</td>\n",
+       "      <td>141513</td>\n",
+       "      <td>141513</td>\n",
+       "      <td>141513</td>\n",
+       "      <td>141513</td>\n",
+       "      <td>141513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1239</td>\n",
+       "      <td>696</td>\n",
+       "      <td>710</td>\n",
+       "      <td>2</td>\n",
+       "      <td>981</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1416</td>\n",
+       "      <td>6425</td>\n",
+       "      <td>118</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Government of Afghanistan - Taleban</td>\n",
+       "      <td>Government of Afghanistan</td>\n",
+       "      <td>Civilians</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Jammu and Kashmir State</td>\n",
+       "      <td></td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>134389</td>\n",
+       "      <td>100004</td>\n",
+       "      <td>21237</td>\n",
+       "      <td>23807</td>\n",
+       "      <td>29302</td>\n",
+       "      <td>117033</td>\n",
+       "      <td>117033</td>\n",
+       "      <td>134420</td>\n",
+       "      <td>132823</td>\n",
+       "      <td>130237</td>\n",
+       "      <td>7626</td>\n",
+       "      <td>36735</td>\n",
+       "      <td>25116</td>\n",
+       "      <td>67505</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        active_year  type_of_violence                            dyad_name  \\\n",
+       "count        141513            141513                               141513   \n",
+       "unique            2                 3                                 1239   \n",
+       "top               1                 1  Government of Afghanistan - Taleban   \n",
+       "freq         134389            100004                                21237   \n",
+       "\n",
+       "                           side_a     side_b    City CACE cityname  Capital  \\\n",
+       "count                      141513     141513  141513        141513   141513   \n",
+       "unique                        696        710       2           981        2   \n",
+       "top     Government of Afghanistan  Civilians       0                      0   \n",
+       "freq                        23807      29302  117033        117033   134420   \n",
+       "\n",
+       "        Majorcity  Top3cities                    adm_1   adm_2      country  \\\n",
+       "count      141513      141513                   141513  141513       141513   \n",
+       "unique          2           2                     1416    6425          118   \n",
+       "top             0           0  Jammu and Kashmir State          Afghanistan   \n",
+       "freq       132823      130237                     7626   36735        25116   \n",
+       "\n",
+       "        region  \n",
+       "count   141513  \n",
+       "unique       5  \n",
+       "top       Asia  \n",
+       "freq     67505  "
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cace.describe(include='category')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e36108f",
+   "metadata": {},
+   "source": [
+    "En la descripción general, se pueden destacar los siguientes puntos:\n",
+    "\n",
+    "- De las entidades participantes, las que tienen mas eventos son:\n",
+    "  - El gobierno de Afganistan (puede deberse a conflictos bélicos)\n",
+    "  - Civiles (atentados o daños colaterales)\n",
+    "- El conflicto (diada o par de entidades) que tiene mas eventos es entre el gobiernos de Afganistán y los talibanes.\n",
+    "- En base a lo anterior, es lógico que el país y continente con mas eventos sea Afganistan y Asia.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "530ec0ae",
+   "metadata": {},
+   "source": [
+    "#### b. Entidades participantes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "35cf928b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "side_a\n",
+       "Government of Afghanistan              23807\n",
+       "Government of India                    10257\n",
+       "Government of Iraq                      5414\n",
+       "Government of Turkey                    4538\n",
+       "Government of Nepal                     4490\n",
+       "Government of Sri Lanka                 4167\n",
+       "Government of Pakistan                  4031\n",
+       "Government of Algeria                   3778\n",
+       "Government of Russia (Soviet Union)     3561\n",
+       "Government of Colombia                  3466\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Primeras 10 entidades que inician el evento (o atacan) que mas se repiten\n",
+    "df_cace['side_a'].value_counts().head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "79f7abb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "side_b\n",
+       "Civilians             29302\n",
+       "Taleban               21372\n",
+       "IS                     6470\n",
+       "Kashmir insurgents     5837\n",
+       "PKK                    4469\n",
+       "LTTE                   4001\n",
+       "CPN-M                  3669\n",
+       "TTP                    3553\n",
+       "FARC                   2864\n",
+       "Al-Shabaab             2817\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Primeras 10 entidades que son atacadas que mas se repiten\n",
+    "df_cace['side_b'].value_counts().head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "67053c95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dyad_name\n",
+       "Government of Afghanistan - Taleban         21237\n",
+       "Government of India - Kashmir insurgents     5837\n",
+       "Government of Iraq - IS                      4621\n",
+       "Government of Turkey - PKK                   4434\n",
+       "Government of Sri Lanka - LTTE               3993\n",
+       "Government of Nepal - CPN-M                  3669\n",
+       "Government of Pakistan - TTP                 3489\n",
+       "Government of Colombia - FARC                2729\n",
+       "Government of Somalia - Al-Shabaab           2678\n",
+       "Government of Algeria - AQIM                 1816\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Primeros 10 par de actores enfretados en un evento\n",
+    "df_cace['dyad_name'].value_counts().head(10)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eac77a34",
+   "id": "f8477881",
    "metadata": {},
    "outputs": [],
    "source": []
